[package]
name = "solana_dex_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.2.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm       = "0.6.1"
solana-sdk    = "2.2.0"
spl-token     = "4.0.0"
borsh         = "1.5.7"
reqwest       = { version = "0.13", features = ["blocking"] }
serde_json    = "1"
bincode       = "1"
base64        = "0.21"
shellexpand   = "3"
solana-client = "2.2.0"
tokio         = { version = "1", features = ["full"] }

[[example]]
name = "client"
path = "examples/client.rs"
